src/components/Navigation/Footer.scss
@import '../../styles/variables';

.container {
  margin-top: 100px;
  padding-top: 20px;
  a {
    text-decoration: none;
    color: black;
  }

  @media print {
    display: none;
  }
}

.containerStudent {
  composes: container;
  background-color: $color-green-light;
}

.containerTeacher {
  composes: container;
  background-color: $color-blue-light;
}

.inline {
  display: inline-block;
  margin: 20px 10px;
}

.svg {
  width: 100px;
  height: auto;
  transition: all 0.075s ease-in-out;
}

.img {
  margin-left: 5px;
  margin-right: 5px;
  margin-bottom: 20px;
  width: auto;
  height: 50px;
  transition: all 0.075s ease-in-out;
}

.divider {
  margin-left: auto;
  margin-right: auto;
  border-top: 1px solid;
  width: 50%;
}

.img:hover {
  transform: scale(1.1);
  box-shadow: 10px 10px 20px 10px rgba(0, 0, 0, 0.5);
}

.contribute {
  text-align: center;
  font-size: 1.5em;
  //font-weight: bold;
}

.githubIcon {
  text-align: center;
}

.sponsors {
  text-align: center;
  margin-top: 20px;
}

